--- a/src/components/layout/CompanyClaim/CompanyClaim.module.scss
+++ b/src/components/layout/CompanyClaim/CompanyClaim.module.scss
@@ -49,11 +49,12 @@
       .cartCounter {
         width: 28px;
         height: 27px;
+        padding-left: 10px;
         border-radius: 14px;
         background-color: $header-bg;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         font-size: 14px;
         color: $cardcounter-color;
         position: absolute;
