--- a/src/components/features/ProductSearch/ProductSearch.module.scss
+++ b/src/components/features/ProductSearch/ProductSearch.module.scss
@@ -26,8 +26,16 @@
     }
 
     select {
+      option {
+        background: none;
+      }
+      &:hover {
+        text-decoration: underline;
+      }
       -webkit-appearance: none;
       border: 0;
+      font-size: 14px;
+      outline: none;
       background-color: transparent;
       padding: 5px 30px 5px 35px;
       position: relative;
