fixes in button scss

--- a/src/components/common/ProductBox/ProductBox.module.scss
+++ b/src/components/common/ProductBox/ProductBox.module.scss
@@ -80,16 +80,12 @@
     visibility: hidden;
   }
 
-  :hover .buttons {
+  &:hover .buttons {
     visibility:visible;
   }
 
-}
+  &:hover .buttonPrice  {
+    background-color:$primary;
+  }
 
-.root:hover .buttons {
-    visibility:visible;
-}
-
-.root:hover .buttonPrice  {
-  background-color:$primary;
 }
