resolve problem with category dropdown

--- a/src/components/features/ProductSearch/ProductSearch.module.scss
+++ b/src/components/features/ProductSearch/ProductSearch.module.scss
@@ -5,13 +5,13 @@
   display: inline-flex;
   height: 45px;
   color: $text-color;
-
+ 
   .category {
     border-right: 1px solid $form-border-color;
     display: flex;
     align-items: center;
     position: relative;
-
+    
     .icon:first-child {
       color: $primary;
       position: absolute;
@@ -25,73 +25,75 @@
       z-index: 0;
     }
 
-    ol {
+    ul {
       list-style-type:none;
       padding:10px;
       margin:10px;
       text-align:center;
-    }
+      
+      a {
+        display:block;
+        text-decoration:none;
+        color:#000;
+        padding:0 5px;
+        font-size: 14px;
+        padding: 10px;
+      }
 
-    ol a {
-      display:block;
-      text-decoration:none;
-      color:#000;
-      padding:0 5px;
-      font-size: 14px;
-      padding: 10px;
-    }
+      li {
+        width:150px;
+        margin-left:1px;
+        z-index: 1;
+        float: left;
 
-    ol > li {
-      float:left;
-      width:150px;
-      margin-left:1px;
-    }
+        &:first-child {
+          margin-left:0;
+        }
 
-    ol > li:first-child {
-      margin-left:0;
-    }
+        &:hover {
+          background-color:#EEE;
+        }
 
-    ol > li:hover {
-      background-color:#EEE;
-    }
+        &:hover  a {
+          color:$primary;
+        }
 
-    ol > li:hover > a {
-      color:$primary;
-    }
+        &:hover  ul {
+          display:block;
+        }
 
-    ol > li:hover > ul {
-      display:block;
-    }
+        ul {
+          display:none;
+          list-style-type:none;
+          padding:0;
+          margin:0;
+          position: absolute;
+      
+          li {
+            position:relative;
+            background-color:#EEE;
 
-    ol > li > ul {
-      display:none;
-      list-style-type:none;
-      padding:0;
-      margin:0;
-    }
+            a {
+              border-top:1px solid #FFF;
+            }
 
-    ol > li > ul > li {
-      position:relative;
-      background-color:#EEE;
-    }
+            &:hover {
+              background-color:#DDD;
+            }
 
-    ol > li > ul > li > a {
-      border-top:1px solid #FFF;
-    }
-
-    ol > li > ul > li:hover {
-      background-color:#DDD;
-    }
-
-    ol > li > ul > li:hover > a {
-      color:$primary;
+            &:hover  a {
+              color:$primary;
+            }
+          }
+        }
+      }
     }
   }
 
   .searchField {
     display: flex;
     align-items: center;
-    position: relative;
+    position:relative;
 
     input {
       border: 0;
