--- a/src/components/common/ProductBox/ProductBox.module.scss
+++ b/src/components/common/ProductBox/ProductBox.module.scss
@@ -10,7 +10,7 @@
     padding: 80% 10px 0 10px;
     background: {
       color: $color-light-tertiary;
-      size: contain;
+      size: cover;
       position: center;
       repeat: no-repeat;
     }
