--- a/src/components/common/FeatureBox/FeatureBox.module.scss
+++ b/src/components/common/FeatureBox/FeatureBox.module.scss
@@ -4,6 +4,32 @@
   border: 1px solid $root-border-color;
   text-align: center;
   margin-top: 40px;
+  
+  ul {
+    margin: 0;
+    padding: 0;
+
+    li {
+      list-style: none;
+      align-items: stretch;
+
+      &:hover {
+
+        .iconWrapper {
+          color: $color-light-primary;
+    
+          &::after {
+            background-color: $primary;
+            border-color: $primary;
+          }
+        }
+        
+        .content {
+          color: $primary;
+        }
+      }
+    }
+  }
 
   .iconWrapper {
     height: 60px;
