--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -4,17 +4,21 @@
 // }
 
 .main {
-  background-color: #2a2a2a;
   color: #ffffff;
   font-size: 16px;
   line-height: 24px;
   font-weight: 600;
   padding: 10px 30px;
+  background: $background-hover;
+  background-size: $background-size-hover;
+  transition: $transition-hover;
+  background-color: #2a2a2a;
 
   &:not(.noHover):hover {
     color: #ffffff !important;
-    background-color: $primary;
+    // background-color: $primary;
     text-decoration: none;
+    background-position: 0;
   }
 }
 
@@ -33,9 +37,14 @@
   color: #2a2a2a;
   font-size: 13px;
   line-height: 22px;
+  background: $background-hover;
+  background-size: $background-size-hover;
+  transition: $transition-hover;
+
 
   &:not(.noHover):hover {
     background-color: #2a2a2a;
     color: #ffffff;
+    background-position: 0;
   }
 }
