--- a/src/components/layout/CompanyClaim/CompanyClaim.module.scss
+++ b/src/components/layout/CompanyClaim/CompanyClaim.module.scss
@@ -32,7 +32,7 @@
       color: #ffffff;
 
       .cartIcon {
-        background-color: $primary;
+        // background-color: $primary;
         width: 55px;
         height: 50px;
         border-radius: 3px;
@@ -40,6 +40,13 @@
         align-items: center;
         justify-content: center;
         font-size: 20px;
+        background: $background-hover;
+        background-size: $background-size-hover;
+        transition: $transition-hover;
+  
+        &:hover {
+          background-position: 0;
+        }
 
         .icon {
           margin-right: 5px;
@@ -60,7 +67,6 @@
         top: 50%;
         right: 0;
         transform: translate(50%, -50%);
-      }
 
       &:hover {
         .cartIcon {
@@ -69,4 +75,5 @@
       }
     }
   }
+}
 }
