--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -21,9 +21,14 @@
             font-size: 14px;
             line-height: 30px;
             color: rgb(169, 169, 169);
+            background: $background-text-hover;
+            background-size: $background-size-hover;
+            transition: $transition-hover;    
 
             &:hover {
-              color: #ffffff;
+              color: $primary;
+              text-decoration: none;
+              background-position: 0 100%;
             }
           }
         }
@@ -70,9 +75,14 @@
           a {
             color: rgb(169, 169, 169);
             text-decoration: none;
+            background: $background-text-hover;
+            background-size: $background-size-hover;
+            transition: $transition-hover;
 
             &:hover {
               color: $primary;
+              text-decoration: none;
+              background-position: 0 100%;
             }
           }
         }
