--- a/src/components/layout/MenuBar/MenuBar.module.scss
+++ b/src/components/layout/MenuBar/MenuBar.module.scss
@@ -35,8 +35,15 @@
       border-top: 4px solid #ffffff;
       font-weight: 500;
       letter-spacing: 1px;
+      background: $background-hover;
+      background-size: $background-size-hover;
+      transition: $transition-hover;
 
-      &:hover,
+      &:hover {
+        background-position: 0;
+        color: #fff;
+      }
+
       &.active {
         background-color: $primary;
         color: #ffffff;
