--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -11,3 +11,11 @@ $primary: #d58e32;
 $text-color: #2a2a2a;
 
 $form-border-color: #292929;
+
+$background-hover: linear-gradient(45deg, $primary 50%, transparent 50%) 100%;
+
+$background-text-hover: linear-gradient(to bottom, transparent 50%) 0% 0%;
+
+$background-size-hover: 400%;
+
+$transition-hover: 250ms ease-in-out, color 250ms ease-in-out;
