--- a/src/components/features/ProductSearch/ProductSearch.module.scss
+++ b/src/components/features/ProductSearch/ProductSearch.module.scss
@@ -25,76 +25,100 @@
       z-index: 0;
     }
 
-    ol {
+    ul {
       list-style-type:none;
       padding:10px;
       margin:10px;
       text-align:center;
-    }
 
-    ol a {
-      display:block;
-      text-decoration:none;
-      color:#000;
-      padding:0 5px;
+      a {
+        display:block;
+        text-decoration:none;
+        color:#000;
+        padding:0 5px;
+        font-size: 14px;
+        padding: 10px;
+      }
+
+      li {
+        width:150px;
+        margin-left:1px;
+        z-index: 1;
+        float: left;
+
+        &:first-child {
+          margin-left:0;
+        }
+
+        &:hover {
+          background-color:#EEE;
+        }
+
+        &:hover  a {
+          color:$primary;
+        }
+
+        &:hover  ul {
+          display:block;
+        }
+
+        ul {
+          display:none;
+          list-style-type:none;
+          padding:0;
+          margin:0;
+          position: absolute;
+
+          li {
+            position:relative;
+            background-color:#EEE;
+
+            a {
+              border-top:1px solid #FFF;
+            }
+
+            &:hover {
+              background-color:#DDD;
+            }
+
+            &:hover  a {
+              color:$primary;
+            }
+          }
+        }
+      }
+
+    select {
+      option {
+        background: none;
+      }
+      &:hover {
+        option {
+          color: $text-color;
+        }
+        text-decoration: underline;
+        color: $primary;
+      }
+      -webkit-appearance: none;
+      border: 0;
       font-size: 14px;
-      padding: 10px;
-    }
+      outline: none;
+      background-color: transparent;
+      padding: 5px 30px 5px 35px;
+      position: relative;
+      z-index: 1;
 
-    ol > li {
-      float:left;
-      width:150px;
-      margin-left:1px;
-    }
-
-    ol > li:first-child {
-      margin-left:0;
-    }
-
-    ol > li:hover {
-      background-color:#EEE;
-    }
-
-    ol > li:hover > a {
-      color:$primary;
-    }
-
-    ol > li:hover > ul {
-      display:block;
-    }
-
-    ol > li > ul {
-      display:none;
-      list-style-type:none;
-      padding:0;
-      margin:0;
-    }
-
-    ol > li > ul > li {
-      position:relative;
-      background-color:#EEE;
-    }
-
-    ol > li > ul > li > a {
-      border-top:1px solid #FFF;
-    }
-
-    ol > li > ul > li:hover {
-      background-color:#DDD;
-    }
-
-    ol > li > ul > li:hover > a {
-      color:$primary;
     }
   }
 
   .searchField {
     display: flex;
     align-items: center;
-    position: relative;
+    position:relative;
 
     input {
       border: 0;
+	
       padding-left: 10px;
       font-size: 14px;
       outline: none;
@@ -110,4 +134,5 @@
       outline: none;
     }
   }
+}
 }
