--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -39,3 +39,13 @@
     color: $color-light-primary;
   }
 }
+
+.outlineFavourites {
+  display: inline-block;
+  padding: 5px 10px;
+  border: 1px solid $text-color;
+  font-size: 13px;
+  line-height: 22px;
+  background-color: $text-color;
+  color: $color-light-primary;
+}
