style change of hover on category

--- a/src/components/features/ProductSearch/ProductSearch.module.scss
+++ b/src/components/features/ProductSearch/ProductSearch.module.scss
@@ -31,6 +31,10 @@
       margin:10px;
       text-align:center;
 
+      &:hover li ul {
+        display: block;
+      }
+
       a {
         display:block;
         text-decoration:none;
@@ -50,16 +54,9 @@
           margin-left:0;
         }
 
-        &:hover {
-          background-color:#EEE;
-        }
-
         &:hover  a {
           color:$primary;
-        }
 
-        &:hover  ul {
-          display:block;
         }
 
         ul {
@@ -77,12 +74,11 @@
               border-top:1px solid #FFF;
             }
 
-            &:hover {
-              background-color:#DDD;
-            }
+           
 
             &:hover  a {
-              color:$primary;
+              color:#EEE;
+              background-color:$primary;
             }
           }
         }
@@ -110,6 +106,7 @@
 
     }
   }
+}
 
   .searchField {
     display: flex;
@@ -135,4 +132,4 @@
     }
   }
 }
-}
+
