--- a/src/components/layout/CompanyClaim/CompanyClaim.module.scss
+++ b/src/components/layout/CompanyClaim/CompanyClaim.module.scss
@@ -32,7 +32,6 @@
       color: #ffffff;
 
       .cartIcon {
-        background-color: $primary;
         width: 55px;
         height: 50px;
         border-radius: 3px;
@@ -40,6 +39,11 @@
         align-items: center;
         justify-content: center;
         font-size: 20px;
+        @extend %buttons-hover-before;
+
+        &:hover {
+          @extend %buttons-hover-after;
+        }
 
         .icon {
           margin-right: 5px;
@@ -60,12 +64,6 @@
         top: 50%;
         right: 0;
         transform: translate(50%, -50%);
-      }
-
-      &:hover {
-        .cartIcon {
-          background-color: lighten($primary, 10%);
-        }
       }
     }
   }
