--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -21,9 +21,10 @@
             font-size: 14px;
             line-height: 30px;
             color: rgb(169, 169, 169);
+            @extend %text-hover-before;
 
             &:hover {
-              color: #ffffff;
+              @extend %text-hover-after;
             }
           }
         }
@@ -70,9 +71,10 @@
           a {
             color: rgb(169, 169, 169);
             text-decoration: none;
+            @extend %text-hover-before;
 
             &:hover {
-              color: $primary;
+              @extend %text-hover-after;
             }
           }
         }
