--- a/src/components/layout/MenuBar/MenuBar.module.scss
+++ b/src/components/layout/MenuBar/MenuBar.module.scss
@@ -25,7 +25,7 @@
     }
 
     a {
-      color: $text-color;
+      // color: $text-color;
       text-transform: uppercase;
       font-size: 12px;
       padding: 1rem;
@@ -35,8 +35,11 @@
       border-top: 4px solid #ffffff;
       font-weight: 500;
       letter-spacing: 1px;
+      @extend %buttons-hover-before;
 
-      &:hover,
+      &:hover {
+        @extend %buttons-hover-after;
+      }
       &.active {
         background-color: $primary;
         color: #ffffff;
