--- a/src/components/layout/TopBar/TopBar.module.scss
+++ b/src/components/layout/TopBar/TopBar.module.scss
@@ -15,10 +15,12 @@
       a {
         color: #ffffff;
         font-size: 13px;
+        @extend %text-hover-before;
 
         &:hover {
           color: $primary;
           text-decoration: none;
+          @extend %text-hover-after;
         }
       }
     }
