--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -11,3 +11,30 @@ $primary: #d58e32;
 $text-color: #2a2a2a;
 
 $form-border-color: #292929;
+
+%buttons-hover-before {
+  background-image: linear-gradient(45deg, $primary 50%, transparent 50%);
+  background-position: 100%;
+  background-size: 400%;
+  transition: 250ms ease-in-out, color 250ms ease-in-out;
+  color: $primary;
+};
+
+%buttons-hover-after {
+  background-position: 0;
+  color: #fff;
+};
+
+%text-hover-before {
+  background-image: linear-gradient(to bottom, transparent 50%);
+  background-position: 0% 0%;
+  background-size: 400%;
+  transition: 250ms ease-in-out, color 250ms ease-in-out;
+  color: $primary;
+}; 
+
+%text-hover-after {
+  background-position: 0% 100%;
+  color: $primary;
+  text-decoration: none;
+};
