--- a/src/components/features/ProductSearch/ProductSearch.module.scss
+++ b/src/components/features/ProductSearch/ProductSearch.module.scss
@@ -30,7 +30,11 @@
       padding:10px;
       margin:10px;
       text-align:center;
-      
+
+      &:hover li ul {
+        display: block;
+      }
+
       a {
         display:block;
         text-decoration:none;
@@ -50,16 +54,8 @@
           margin-left:0;
         }
 
-        &:hover {
-          background-color:#EEE;
-        }
-
         &:hover  a {
           color:$primary;
-        }
-
-        &:hover  ul {
-          display:block;
         }
 
         ul {
@@ -68,7 +64,7 @@
           padding:0;
           margin:0;
           position: absolute;
-      
+
           li {
             position:relative;
             background-color:#EEE;
@@ -77,16 +73,14 @@
               border-top:1px solid #FFF;
             }
 
-            &:hover {
-              background-color:#DDD;
-            }
-
             &:hover  a {
-              color:$primary;
+              color:#EEE;
+              background-color:$primary;
             }
           }
         }
       }
+
     select {
       option {
         background: none;
@@ -108,6 +102,7 @@
       z-index: 1;
     }
   }
+}
 
   .searchField {
     display: flex;
@@ -116,14 +111,9 @@
 
     input {
       border: 0;
-      padding-left: 10px;
-      font-size: 14px;
       outline: none;
-
-      &::placeholder {
-        color: $text-color;
-      }
     }
+  }
 
     button {
       border: 0;
@@ -131,5 +121,4 @@
       outline: none;
     }
   }
-}
-}
+
