--- a/src/components/layout/MenuBar/MenuBar.module.scss
+++ b/src/components/layout/MenuBar/MenuBar.module.scss
@@ -73,14 +73,15 @@
     .menuBarSearch{
       order: 1;
       flex-basis: 50%;
+      max-width: 70%;
     }
     .menu{
       order: 2;
       flex-basis: 30%;
       align-items: center;
       justify-content: flex-start;
-
       position: relative;
+
       ul{
         .icon{
           display: block;
