--- a/src/components/layout/MenuBar/MenuBar.module.scss
+++ b/src/components/layout/MenuBar/MenuBar.module.scss
@@ -7,23 +7,25 @@
   :global(.container) > :global(.row) {
     height: 84px;
     @media (max-width: 1024px){
-      height: 109px;
+      height: 99px;
     }
   }
-  .menuBarRow{
+  .menuBarRow {
     align-items: center;
+    justify-content: center;
   }
+
   .menu {
     display: flex;
     align-self: stretch;
-
+    .icon{
+      display: none;
+    }
     ul {
       margin: 0;
       padding: 0;
       display: flex;
-      .icon{
-        display: none;
-      }
+
 
       li {
         list-style: none;
@@ -60,56 +62,61 @@
   @media (max-width: 1024px){
     .menuBarSearch{
       order: 2;
+      text-align: center;
     }
     .menu{
       order: 1;
+
     }
   }
   /*Mobile*/
   @media (max-width: 767px){
     .menuBarRow{
       flex-direction: row;
+      flex-wrap: nowrap;
+      position: relative;
     }
     .menuBarSearch{
       order: 1;
       flex-basis: 50%;
-      max-width: 70%;
+
     }
     .menu{
       order: 2;
       flex-basis: 30%;
+      display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: center;
       position: relative;
-
+      .icon{
+        border-radius: 3px;
+        display: block;
+      }
       ul{
+        display: none;
+      }
+      &:hover{
         .icon{
-          display: block;
-          width: 55px;
-          height: 50px;
-          border-radius: 3px;
-          display: block;
-
+          fill: $orange;
         }
-        li{
-          display: none;
-        }
-        &:hover{
+        ul {
           position: absolute;
-          top: 28px;
-          left: 16px;
+          top: 72%;
+          left: 6%;
           display: flex;
           flex-direction: column;
           z-index: 10;
-
           li{
             display: block;
+            height: 45px;
             background-color: $light-grey-tertiary;
+            a{
+              border-top: none;
+            }
           }
         }
-
       }
     }
   }
-
 }
