--- a/src/components/layout/CompanyClaim/CompanyClaim.module.scss
+++ b/src/components/layout/CompanyClaim/CompanyClaim.module.scss
@@ -40,12 +40,10 @@
         align-items: center;
         justify-content: center;
         font-size: 20px;
-        background: $background-hover;
-        background-size: $background-size-hover;
-        transition: $transition-hover;
+        @extend %button-hover-before;
   
         &:hover {
-          background-position: 0;
+          @extend %button-hover-after;
         }
 
         .icon {
