--- a/src/components/layout/MenuBar/MenuBar.module.scss
+++ b/src/components/layout/MenuBar/MenuBar.module.scss
@@ -25,7 +25,7 @@
     }
 
     a {
-      color: $text-color;
+      // color: $text-color;
       text-transform: uppercase;
       font-size: 12px;
       padding: 1rem;
@@ -35,13 +35,11 @@
       border-top: 4px solid #ffffff;
       font-weight: 500;
       letter-spacing: 1px;
-      background: $background-hover;
-      background-size: $background-size-hover;
-      transition: $transition-hover;
+      @extend %button-hover-before;
 
       &:hover {
-        background-position: 0;
-        color: #fff;
+        @extend %button-hover-after;
+        // color: #fff;
       }
 
       &.active {
