--- a/src/components/layout/TopBar/TopBar.module.scss
+++ b/src/components/layout/TopBar/TopBar.module.scss
@@ -15,14 +15,12 @@
       a {
         color: #ffffff;
         font-size: 13px;
-        background: $background-text-hover;
-        background-size: $background-size-hover;
-        transition: $transition-hover;
+        @extend %text-hover-before;
 
         &:hover {
-          color: $primary;
+          // color: $primary;
           text-decoration: none;
-          background-position: 0 100%;
+          @extend %text-hover-after;
         }
       }
     }
