Mobile menu, fixed positioning and padding

--- a/src/components/layout/MenuBar/MenuBar.module.scss
+++ b/src/components/layout/MenuBar/MenuBar.module.scss
@@ -4,17 +4,16 @@
   box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
   background-color: $color-light-primary;
 
-  :global(.container) > :global(.row) {
-    height: 84px;
-    @media (max-width: 1024px){
-      height: 99px;
-    }
-  }
   .menuBarRow {
     align-items: center;
     justify-content: center;
+    padding: $base-padding 0;
   }
-
+  .menuBarSearch{
+    justify-content: center;
+    align-items: center;
+    height: 45px;
+  }
   .menu {
     display: flex;
     align-self: stretch;
@@ -60,26 +59,30 @@
   }
   /*Tablets*/
   @media (max-width: 1024px){
+    .menuBarRow {
+      padding: 0;
+    }
     .menuBarSearch{
       order: 2;
       text-align: center;
     }
     .menu{
       order: 1;
-
+      justify-content: center;
     }
   }
   /*Mobile*/
   @media (max-width: 767px){
+
     .menuBarRow{
       flex-direction: row;
       flex-wrap: nowrap;
       position: relative;
+      padding: $base-padding;
     }
     .menuBarSearch{
       order: 1;
       flex-basis: 50%;
-
     }
     .menu{
       order: 2;
@@ -102,11 +105,11 @@
         }
         ul {
           position: absolute;
-          top: 72%;
-          left: 6%;
           display: flex;
           flex-direction: column;
           z-index: 10;
+          top: calc(100% - (100% - 45px) / 2);
+          max-width: calc(100%);
           li{
             display: block;
             height: 45px;
