--- a/src/components/features/NewFurniture/NewFurniture.module.scss
+++ b/src/components/features/NewFurniture/NewFurniture.module.scss
@@ -99,3 +99,13 @@
     }
   }
 }
+
+.newFurnitureWrapper {
+  background: red;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.activePageAnimation {
+  display: none;
+}
