--- a/src/components/common/ProductToCompare/ProductToCompare.module.scss
+++ b/src/components/common/ProductToCompare/ProductToCompare.module.scss
@@ -3,7 +3,6 @@
 .root {
   background-color: $color-light-primary;
   border: 1px solid $color-light-secondary;
-  margin-bottom: 2rem;
   width: 100%;
   max-width: 100%;
   position: relative;
@@ -25,6 +24,7 @@
     height: 2em;
     width: 2em;
     color: $orange;
+
     cursor: pointer;
 
     visibility: hidden;
@@ -33,5 +33,8 @@
 
   &:hover .icon{
     visibility: visible;
+  }
+  &:hover .icon:hover{
+    color: #FFE4C4;
   }
 }
