--- a/src/components/common/FeatureBox/FeatureBox.module.scss
+++ b/src/components/common/FeatureBox/FeatureBox.module.scss
@@ -4,6 +4,8 @@
   border: 1px solid $root-border-color;
   text-align: center;
   margin-top: 40px;
+  height: 70%;
+
 
   .iconWrapper {
     height: 60px;
