--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -35,3 +35,6 @@ $root-border-color: $light-grey-secondary;
 $phone-paragraph-color: $light-grey-tertiary;
 $cardcounter-color: $light-grey-quaternary;
 $list-element-text-color: $light-grey-5th;
+
+//TRANSITION
+$transition: 0.6s;
