--- a/src/components/features/NewFurniture/NewFurniture.module.scss
+++ b/src/components/features/NewFurniture/NewFurniture.module.scss
@@ -1,6 +1,13 @@
 @import "../../../styles/settings.scss";
 
 .root {
+  .productsRow{
+    justify-content: left;
+    .product {
+      flex-basis: 25%;
+      max-width: 25%;
+    }
+  }
   .panelBar {
     margin-bottom: 30px;
     position: relative;
@@ -19,15 +26,6 @@
         line-height: 38px;
         margin: 0;
         letter-spacing: 1px;
-      }
-
-      &::before {
-        content: "";
-        position: absolute;
-        bottom: -4px;
-        left: 0;
-        width: 45px;
-        border-bottom: 4px solid $primary;
       }
     }
 
@@ -95,6 +93,49 @@
             }
           }
         }
+      }
+    }
+  }
+  /*Tablets*/
+  @media (max-width: 1024px){
+
+    .productsRow{
+      justify-content: left;
+      .product {
+        flex-basis: 33.3%;
+        max-width: 33.33%;
+      }
+    }
+  }
+  /*Mobile*/
+  @media (max-width: 767px){
+
+    .menuPagesBar{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .heading{
+        min-width: 100%;
+        padding-bottom: 0.5em;
+        text-align: right;
+        border-bottom: none;
+      }
+      .menu{
+        padding-top: 1em;
+        border-bottom: 4px solid $global-border-color;
+      }
+      .dots{
+        position: inherit;
+        margin-bottom: 1em;
+      }
+    }
+    .productsRow{
+      flex-direction: column;
+      justify-content: center;
+      .product {
+        max-width: 100%;
+        width: 100%;
       }
     }
   }
