--- a/src/components/common/FeatureBox/FeatureBox.module.scss
+++ b/src/components/common/FeatureBox/FeatureBox.module.scss
@@ -4,8 +4,8 @@
   border: 1px solid $root-border-color;
   text-align: center;
   margin-top: 40px;
-  height: 70%;
-
+  height: 100%;
+  margin-bottom: 10px;
   transition: .8s;
 
     &:hover {
