test commit with solution

--- a/src/components/common/StarRating/StarRating.modules.scss
+++ b/src/components/common/StarRating/StarRating.modules.scss
@@ -5,10 +5,15 @@ input[type="radio"] {
     cursor: pointer;
 }
 
-  svg:hover {
-    color: blue !important ;
-}
+//   svg:hover {
+//     color: blue !important ;
+// }
 
 .FontColor {
     color:gold;
 }
+
+.fontIcon {
+    color: #e6e29c;
+}
+
