Finish implement StarRating component

--- a/src/components/common/StarRating/StarRating.modules.scss
+++ b/src/components/common/StarRating/StarRating.modules.scss
@@ -5,15 +5,6 @@ input[type="radio"] {
     cursor: pointer;
 }
 
-//   svg:hover {
-//     color: blue !important ;
-// }
-
-.FontColor {
-    color:gold;
+svg {
+    cursor: pointer;
 }
-
-.fontIcon {
-    color: #e6e29c;
-}
-
