--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -38,6 +38,8 @@ $list-element-text-color: $light-grey-5th;
 
 $form-border-color: #292929;
 
+// PLACEHOLDER FOR HOVER
+
 %button-hover-before {
   background-image: linear-gradient(45deg, $primary 50%, transparent 50%);
   background-position: 100%;
