--- a/src/components/features/PromoBox/PromoBox.module.scss
+++ b/src/components/features/PromoBox/PromoBox.module.scss
@@ -76,9 +76,9 @@
     align-content: flex-end;
     display: flex;
     height: 100%;
+    position: relative;
   }
   display: flex;
-
 }
 
 
@@ -89,6 +89,44 @@
 
 .paddingZero {
   padding: 0;
+}
+
+.promoDescription {
+  p:first-of-type {
+    span {
+      font-weight: bold;
+    }
+    font-size: 4rem;
+    margin: 0;
+  }
+  p:last-of-type {
+    font-size: 1.5rem;
+  }
+  position: absolute;
+  padding-top: 7%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: $color-light-primary;
+  text-transform: uppercase;
+  background: $background-transparent;
+  width: 100%;
+  height: 14rem;
+  text-align: center;
+}
+
+.shopButton {
+  position: absolute;
+  top: 67%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: $color-light-secondary;
+  padding: 12px 24px;
+  border-radius: 5px;
+  color: $black-secondary;
+  text-transform: uppercase;
+  font-weight: 600;
+
 }
 
 
